24/12/2025 fix the issue in the system

--- a/templates/auth-forgot-password.html
+++ b/templates/auth-forgot-password.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password - Null</title>
+    <title>Forgot Password - StockSale</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}">
@@ -20,17 +20,12 @@
         <div class="row h-100">
             <div class="col-lg-5 col-12">
                 <div id="auth-left">
-
-                    <div class="auth-logo">
-                        <a href="{% url 'index' %}">
-                            <img src="{% static 'assets/images/logo/logo.png' %}" alt="Logo">
-                        </a>
+                    <a class="auth-title" href="{% url 'index' %}">
+                        <h6 class="auth-title">StockSale</h6>
+                    </a>
+                    <div class="text mt-5 text-lg fs-4">
+                        <p>Forgot Password? Input your email and we will send you a reset password link.</p>
                     </div>
-
-                    <h1 class="auth-title">Forgot Password</h1>
-                    <p class="auth-subtitle mb-5">
-                        Input your email and we will send you a reset password link.
-                    </p>
 
                     <form method="POST">
                         {% csrf_token %}
