--- a/templates/auth-reset_password.html
+++ b/templates/auth-reset_password.html
@@ -20,11 +20,13 @@
         <div class="row h-100">
             <div class="col-lg-5 col-12">
                 <div id="auth-left">
+                    <a class="auth-title" href="{% url 'index' %}">
+                        <h6 class="auth-title">StockSale</h6>
+                    </a>
+                    <div class="text mt-5 text-lg fs-4">
+                        <p>Reset Password, Enter your new password below.</p>
+                    </div>
 
-                    <h1 class="auth-title">Reset Password</h1>
-                    <p class="auth-subtitle mb-5">
-                        Enter your new password below.
-                    </p>
                     <form method="POST">
                         {% csrf_token %}
 
